# -------------------------------------
# cmake configuration
# -------------------------------------

CMAKE_MINIMUM_REQUIRED(VERSION 3.3.0)
MARK_AS_ADVANCED(CMAKE_BACKWARDS_COMPATIBILITY)
SET(CMAKE_ALLOW_LOOSE_LOOP_CONSTRUCTS TRUE)
SET(CMAKE_VERBOSE_MAKEFILE ON)
SET(CMAKE_MACOSX_RPATH OFF)

# -------------------------------------
# Project configuration
# -------------------------------------

PROJECT(meanie3D-python)
GET_DIRECTORY_PROPERTY(PACKAGE_VERSION DIRECTORY .. DEFINITION PACKAGE_VERSION)
GET_DIRECTORY_PROPERTY(PROJECT_URL DIRECTORY .. DEFINITION PROJECT_URL)
GET_DIRECTORY_PROPERTY(PROJECT_LICENSE DIRECTORY .. DEFINITION PROJECT_LICENSE)

# Python
FIND_PACKAGE(PythonInterp REQUIRED)
IF (PYTHONINTERP_FOUND)
    MESSAGE(STATUS "Found Python interpreter (${PYTHON_VERSION_STRING}) ${PYTHON_EXECUTABLE}")
ELSE()
    MESSAGE(FATAL_ERROR "python not found")
ENDIF()

# ------------------------------------------------------------- #
# Python packaging
# ------------------------------------------------------------- #
IF (PYTHONINTERP_FOUND)

    # Configure package file
    FILE(COPY meanie3D DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
    FILE(COPY setup.py.in DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
    FILE(COPY MANIFEST.in DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
    FILE(COPY README.txt.in DESTINATION ${CMAKE_CURRENT_BINARY_DIR})

    SET(SETUP_PY ${CMAKE_CURRENT_BINARY_DIR}/setup.py)
    CONFIGURE_FILE(${CMAKE_CURRENT_BINARY_DIR}/setup.py.in ${SETUP_PY})
    CONFIGURE_FILE(${CMAKE_CURRENT_BINARY_DIR}/meanie3D/__init__.py.in ${CMAKE_CURRENT_BINARY_DIR}/meanie3D/__init__.py)
    CONFIGURE_FILE(${CMAKE_CURRENT_BINARY_DIR}/README.txt.in ${CMAKE_CURRENT_BINARY_DIR}/README.txt)

    ADD_CUSTOM_TARGET(${PROJECT_NAME} ALL COMMAND ${PYTHON_EXECUTABLE} setup.py build)
    ADD_CUSTOM_TARGET(${PROJECT_NAME}-clean COMMAND rm -rf build dist *.egg-info setup.py meanie3D/__init__.py README.txt)

    INSTALL(CODE "EXECUTE_PROCESS(COMMAND \"${PYTHON_EXECUTABLE}\" setup.py install WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})")

ENDIF()
